<resources>
    <string name="app_name">Muni App</string>
    <string name="title_activity_home">Restaurant List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="apply_condition_text">"This App provided only for marketing personals. \n Terms and Condition apply"
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_hint">Search</string>
    <!-- Reg form string -->
    <string name="res_name">Restaurant Name</string>
    <string name="res_branch">Branch</string>
    <string name="res_addr">Address</string>
    <string name="res_loc">Location (from Google Map)</string>
    <string name="res_contact">Contact number</string>
    <string name="res_cuis">Cuisines</string>
    <string name="res_type">Restaurant Type</string>
    <string name="res_open">Open Time</string>
    <string name="res_close">Close Time</string>
    <string name="res_desc">Description</string>
    <string name="res_status">Status</string>
    <string name="res_owner">Owner Name</string>
    <string name="res_image">Restaurant Images</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyC2MZ888RxDMRgyqkqD63BMRKedJ8jZOxQ-BANtDWs2iO-yoyQ</string>
</resources>
