<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.muni.in.view.login.LoginActivity1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.75"
            android:background="@mipmap/login_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="190dp"
                android:layout_height="95dp"
                android:scaleType="centerInside"
                android:src="@mipmap/muni_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerInParent="true"
                android:text="Online Food Delivering App"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="-66dp"
            android:layout_weight="1.85">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <EditText
                        android:id="@+id/edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_line"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="8dp"
                        android:hint="@string/prompt_username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingBottom="17dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="17dp"
                        android:singleLine="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                    <EditText
                        android:id="@+id/edit_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:drawableLeft="@drawable/ic_finger_print"
                        android:drawablePadding="8dp"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="17dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="17dp"
                        android:singleLine="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                </LinearLayout>


                <Button
                    android:id="@+id/but_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/green_shadow"
                    android:backgroundTint="@color/login_button"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/action_sign_in"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/term_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="8dp"
            android:gravity="center_horizontal"
            android:text="@string/apply_condition_text"
            android:textColor="@color/term_condition"
            android:textSize="@dimen/terms_condition_textsize"
            android:textStyle="italic" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>
